<resources>
    <string name="app_name">Snap Kit</string>
    <string name="title_home">@string/app_name</string>

    <string name="title_login">Login Kit</string>
    <string name="title_bitmoji">Bitmoji Kit</string>
    <string name="title_creative">Creative Kit</string>
    <string name="title_story">Story Kit</string>
    <string name="title_ad">Ad Kit</string>
    <string name="title_camera">Camera Kit</string>
=
    <string name="external_id">External ID</string>
    <string name="display_name">Display Name</string>
    <string name="logout_button">Unlink account</string>
</resources>